--- a/angular.json
+++ b/angular.json
@@ -20,6 +20,7 @@
             "tsConfig": "tsconfig.app.json",
             "assets": ["src/favicon.ico", "src/assets"],
             "styles": [
+              "src/reset.css",
               "node_modules/normalize.css/normalize.css",
               "src/styles.css"
             ],
