--- a/angular.json
+++ b/angular.json
@@ -23,7 +23,8 @@
               "src/reset.css",
               "node_modules/@ng-select/ng-select/themes/default.theme.css",
               "node_modules/normalize.css/normalize.css",
-              "src/styles.css"
+              "src/styles.css",
+              "src/app/components/tooltip/tooltip.directive.css"
             ],
             "scripts": []
           },
