--- a/angular.json
+++ b/angular.json
@@ -13,6 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
+            "allowedCommonJsDependencies": ["rollbar"],
             "outputPath": "dist/creative-front",
             "index": "src/index.html",
             "main": "src/main.ts",
