--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -3,12 +3,8 @@
   "extends": "./tsconfig.json",
   "compilerOptions": {
     "outDir": "./out-tsc/spec",
-    "types": [
-      "jasmine"
-    ]
+    "module": "CommonJS",
+    "types": ["jest", "node", "@testing-library/jest-dom"]
   },
-  "include": [
-    "src/**/*.spec.ts",
-    "src/**/*.d.ts"
-  ]
+  "include": ["src/**/*.spec.ts", "src/**/*.d.ts", "./jest-setup.ts"]
 }
