--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,12 +9,34 @@
       "preLaunchTask": "npm: start",
       "url": "http://localhost:4200/"
     },
+    // {
+    //   "name": "ng test",
+    //   "type": "chrome",
+    //   "request": "launch",
+    //   "preLaunchTask": "npm: test",
+    //   "url": "http://localhost:9876/debug.html"
+    // },
     {
-      "name": "ng test",
-      "type": "chrome",
+      "type": "node",
+      "name": "vscode-jest-tests.v2",
       "request": "launch",
-      "preLaunchTask": "npm: test",
-      "url": "http://localhost:9876/debug.html"
+      "args": [
+        "test",
+        "--",
+        "--runInBand",
+        "--watchAll=false",
+        "--testNamePattern",
+        "${jest.testNamePattern}",
+        "--runTestsByPath",
+        "${jest.testFile}"
+      ],
+      "cwd": "c:\\Projects\\creative\\creative-front",
+      "console": "integratedTerminal",
+      "internalConsoleOptions": "neverOpen",
+      "runtimeExecutable": "npm"
+      // "windows": {
+      //   "program": "C:\\Program Files\\nodejs\\npm.cmd"
+      // }
     }
   ]
 }
